--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         "php": ">=5.6.0",
         "cakephp/chronos": "^1.0.0",
         "fzaninotto/faker": "~1.4",
-        "symfony/finder": "^3.3",
-        "cakephp/cakephp": "^3.6",
-        "cakephp/migrations": "~1.0"
+        "symfony/finder": "^3.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^6.0"
+        "phpunit/phpunit": "^5.7|^6.0",
+        "cakephp/cakephp": "^3.6",
+        "cakephp/migrations": "~1.0"
     },
     "autoload": {
         "psr-4": {
