--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/finder": "^3.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^6.0",
+		"phpunit/phpunit": "^5.7|^6.0|^7.0|^8.5",
         "cakephp/cakephp": "^3.6",
         "cakephp/migrations": "~1.0"
     },
