--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "cakephp/chronos": "^1.0.0",
         "fzaninotto/faker": "~1.4",
-        "symfony/finder": "^3.3"
+        "symfony/finder": "^3.3",
+        "cakephp/cakephp": "^4.0",
+        "cakephp/chronos": "^2.0",
+        "cakephp/migrations": "^3.0"
     },
     "require-dev": {
-		"phpunit/phpunit": "^5.7|^6.0|^7.0|^8.5",
-        "cakephp/cakephp": "^3.6",
-        "cakephp/migrations": "~1.0"
+		"phpunit/phpunit": "^5.7|^6.0|^7.0|^8.5"
     },
     "autoload": {
         "psr-4": {
