--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "fzaninotto/faker": "~1.4",
+        "fakerphp/faker": "~1.4",
         "symfony/finder": "^3.3",
         "cakephp/cakephp": "^4.0",
         "cakephp/chronos": "^2.0",
